# MHE

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  record.dpgen  session.xml  solve.m
.mhe/: config.json
docs/: ABACUS_EXTENSION_HANDOFF_REPORT.md  API_STABILITY.md  Conclusion.md  Intra-CMA.md  MHE_CMA_Improvement_Analysis.tex  MHE_RECENT_WORK_REPORT.md  MHE_Wiki_Implementation_Gap_Report.md  README.md  TECHNICAL_MANUAL.md  TEST_GUIDE.md  USER_GUIDE.md  WIKI_REVISION_OUTLINE_REPORT.md  qcompute-user-manual.md
docs/wiki/: Qcompute.md  (+3 more)
tests/: conftest.py  test_ai4pde_case_execution.py  test_ai4pde_case_parser.py  test_ai4pde_cli_demo.py  test_ai4pde_contracts.py  test_ai4pde_graphs.py  test_ai4pde_minimal_demo.py  test_ai4pde_mutation_flow.py  test_ai4pde_policy.py  test_ai4pde_runtime_handoff.py  test_ai4pde_validation.py  test_api_commit.py  test_assembly.py  test_async_io.py  test_benchmark_approval_policy.py  test_benchmark_drivers_cli.py  test_benchmark_drivers_models.py  test_benchmark_drivers_nektar.py  test_benchmark_drivers_octave.py  test_benchmark_drivers_qcompute_abacus.py  test_benchmarks.py  test_boot.py  test_core_execution_lifecycle.py  test_demo.py  test_dependency.py  test_discovery.py  test_drain_protocol.py  test_engine_routing.py  test_event_bus.py  test_fixtures.py  test_graph_version_manager.py  test_hot_reload.py  test_identity_boundary.py  test_lifecycle.py  test_manifest_extended.py  test_metaharness_abacus_compiler.py  test_metaharness_abacus_environment.py  test_metaharness_abacus_executor.py  test_metaharness_abacus_gateway.py  (+149 more)
(+796 files in other folders)
