[project]
name = "metaharness"
version = "0.1.0"
description = "Meta-Harness Engineering reference runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "ruff==0.15.6",
]

[project.scripts]
metaharness = "metaharness.cli:main"
metaharness-demo = "metaharness.demo:main"
ai4pde-demo = "metaharness_ext.ai4pde.demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metaharness", "src/metaharness_ext"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not nektar'"
markers = [
    "nektar: requires local Nektar++ installation",
    "integration: integration tests requiring external dependencies (qiskit-aer, pennylane)",
]
